--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,6 +501,41 @@ header{
     padding-top: 3px;
 }
 
+.dashboard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 95vh;
+}
+
+.dashboard h2{
+    font-size: 4rem;
+    font-weight: 200;
+    color: #F0F0F0;
+    text-transform: uppercase;
+    /* padding-top: 10%; */
+    padding-bottom: 2%;
+}
+
+.dashboard p{
+    font-size: 1.4rem;
+    color: #9A9A9A;
+}
+
+.dashboard ul{
+    display: grid;
+    margin-top: 3%;
+    grid-template-columns: repeat(6, auto);
+    gap: 10px 20px;
+    flex-direction: row;
+}
+
+.dashboard ul li{
+    font-size: 1.4rem;
+
+}
+
 .container_contato{
     display: flex;
     height: 85vh;
