--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,7 +19,19 @@
         </div>
     </header>
     <main>
-        
+        <div class="dashboard">
+            <h2>Dashboard</h2>
+            <p>Total de disciplinas: <%= dados.totalDisciplinas %></p>
+            <p>Total de projetos: <%= dados.totalProjetos %></p>
+            <p>Tecnologias usadas:</p>
+            <ul>
+                <% dados.tecnologias.forEach((t, i) => { %>
+                    <li>
+                        <%= t %><%= i === dados.tecnologias.length - 1 ? '.' : ',' %>
+                    </li>
+                <% }) %>
+            </ul>
+            </div>
     </main>
     <%- include('partials/footer') %>
 </body>
