--- a/views/projetos.ejs
+++ b/views/projetos.ejs
@@ -24,6 +24,13 @@
         <div class="container_projetos">
             <div class="projeto_texto">
                 <h2>projetos</h2>
+                
+                <a href="/projetos/crud">
+                    <button class="btn up">
+                        <span>Gerenciar Projetos</span>
+                        <i class="bi bi-pencil-square"></i>
+                    </button>
+                </a>
             </div>
             <div class="container_cards">
                 <% projetos.forEach(projeto => { %>
