--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio</title>
 
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <%- include('partials/navbar') %>
-        <div class="logo_nome">
-            <img src="/img/home/EnzoGabrielCode.png" alt="">
-        </div>
+      <%- include('partials/navbar') %>
+      <div class="logo_nome">
+        <img src="/img/home/EnzoGabrielCode.png" alt="" />
+      </div>
     </header>
     <main>
-        <div class="dashboard">
-            <h2>Dashboard</h2>
-            <p>Total de disciplinas: <%= dados.totalDisciplinas %></p>
-            <p>Total de projetos: <%= dados.totalProjetos %></p>
-            <p>Tecnologias usadas:</p>
-            <ul>
-                <% dados.tecnologias.forEach((t, i) => { %>
-                    <li>
-                        <%= t %><%= i === dados.tecnologias.length - 1 ? '.' : ',' %>
-                    </li>
-                <% }) %>
-            </ul>
-            </div>
+      <div class="dashboard">
+        <h2>Dashboard</h2>
+        <p>Total de disciplinas: <%= dados.totalDisciplinas %></p>
+        <p>Total de projetos: <%= dados.totalProjetos %></p>
+        <p>Tecnologias usadas:</p>
+        <ul>
+          <% dados.tecnologias.forEach((t, i) => { %>
+          <li><%= t %><%= i === dados.tecnologias.length - 1 ? '.' : ',' %></li>
+          <% }) %>
+        </ul>
+      </div>
     </main>
     <%- include('partials/footer') %>
-</body>
+  </body>
 </html>
