--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio</title>
 
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <%- include('partials/navbar') %>
-        <div class="logo_nome">
-            <img src="/img/home/EnzoGabrielCode.png" alt="">
-        </div>
+      <%- include('partials/navbar') %>
+      <div class="logo_nome">
+        <img src="/img/home/EnzoGabrielCode.png" alt="" />
+      </div>
     </header>
     <main>
-        <section id="home">
-            <div class="container_apresentacao_home">
-                <div class="container_textos_home">
-                    <div class="container_nome_home">
-                        <h2>OLÁ, MEU NOME É</h2>
-                        <h1>Enzo Gabriel</h1>
-                    </div>
-                    <div class="container_bemvindo">
-                        <h2>BEM-VINDO AO MEU PORTFÓLIO!</h2>
-                    </div>
-                
-                    <ul class="menu_links">
-                        <li class="up"><a class="menu_link" href="https://github.com/EnzoGabrielCode" target="_blank"><i class="bi bi-github"></i></a></li>
-                        <li class="up"><a class="menu_link" href="https://www.linkedin.com/in/enzo-gabriel-de-paula-8795a8332/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                    </ul>
-        
-                    <a class="botao_continue" href="/sobre">
-                        <button class="btn btn--primary up">
-                        <span>SOBRE MIM</span>
-                        <i class="bi bi-arrow-up-right"></i>
-                    </button>
-                    </a>
-                </div>
-                
+      <section id="home">
+        <div class="container_apresentacao_home">
+          <div class="container_textos_home">
+            <div class="container_nome_home">
+              <h2>OLÁ, MEU NOME É</h2>
+              <h1><%= nome %></h1>
             </div>
-    </section>
+            <div class="container_bemvindo">
+              <h2>BEM-VINDO AO MEU PORTFÓLIO!</h2>
+            </div>
+
+            <ul class="menu_links">
+              <li class="up">
+                <a
+                  class="menu_link"
+                  href="https://github.com/EnzoGabrielCode"
+                  target="_blank"
+                  ><i class="bi bi-github"></i
+                ></a>
+              </li>
+              <li class="up">
+                <a
+                  class="menu_link"
+                  href="https://www.linkedin.com/in/enzo-gabriel-de-paula-8795a8332/"
+                  target="_blank"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+              </li>
+            </ul>
+
+            <a class="botao_continue" href="/sobre">
+              <button class="btn btn--primary up">
+                <span>SOBRE MIM</span>
+                <i class="bi bi-arrow-up-right"></i>
+              </button>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
-    
+
     <script src="/scripts/script.js"></script>
-</body>
+  </body>
 </html>
