--- a/views/projetos.ejs
+++ b/views/projetos.ejs
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio</title>
 
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <%- include('partials/navbar') %>
-        <div class="logo_nome">
-            <img src="/img/home/EnzoGabrielCode.png" alt="">
-        </div>
+      <%- include('partials/navbar') %>
+      <div class="logo_nome">
+        <img src="/img/home/EnzoGabrielCode.png" alt="" />
+      </div>
     </header>
     <main>
-        
-    <section id="projetos">
+      <section id="projetos">
         <div class="container_projetos">
-            <div class="projeto_texto">
-                <h2>projetos</h2>
-                
-                <a href="/projetos/crud">
-                    <button class="btn up">
-                        <span>Gerenciar Projetos</span>
-                        <i class="bi bi-pencil-square"></i>
-                    </button>
-                </a>
-            </div>
-            <div class="container_cards">
-                <% projetos.forEach(projeto => { %>
-                    <%- include('partials/cardProjeto', { projeto }) %>
-                <% }) %>
-            </div>
-            <div class="projeto_btn">
-                <a href="https://github.com/EnzoGabrielCode" target="_blank">
-                    <button class="btn btn--primary up">
-                        <span>Ver Todos os projetos</span>
-                        <i class="bi bi-arrow-up-right"></i>
-                    </button>
-                </a>
-            </div>
+          <div class="projeto_texto">
+            <h2>projetos</h2>
+
+            <a href="/projetos/crud">
+              <button class="btn up">
+                <span>Gerenciar Projetos</span>
+                <i class="bi bi-pencil-square"></i>
+              </button>
+            </a>
+          </div>
+          <div class="container_cards">
+            <% projetos.forEach(projeto => { %> <%-
+            include('partials/cardProjeto', { projeto }) %> <% }) %>
+          </div>
+          <div class="projeto_btn">
+            <a href="https://github.com/EnzoGabrielCode" target="_blank">
+              <button class="btn btn--primary up">
+                <span>Ver Todos os projetos</span>
+                <i class="bi bi-arrow-up-right"></i>
+              </button>
+            </a>
+          </div>
         </div>
-    </section>
+      </section>
     </main>
     <%- include('partials/footer') %>
-</body>
+  </body>
 </html>
